--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       VAULT_ADDR: http://vault:8200
-      VAULT_TOKEN: ${VAULT_TOKEN}
+      VAULT_TOKEN: "devSimpleToken"
     depends_on:
       - redis
       - vault
@@ -27,6 +27,8 @@ services:
     image: vault
     cap_add:
       - IPC_LOCK
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: "devSimpleToken"
     ports:
       - "8200:8200"
     volumes:
